Document PPDG/src/objects/Call_Centre_Sales_Coaching_Record__c.object
<CustomObject>
    <fields>
        <fullName>Previous_Development_Areas_Maximum_3__c</fullName>
        <description>Previous development areas identified from previous call</description>
        <inlineHelpText>You must enter the development areas identified from previous colleague call monitoring</inlineHelpText>
        <label>Previous Development Areas (Maximum 3)</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Probe_customers_understanding_of_account__c</fullName>
        <description>Did the consultant confirm with the customer that they understood the product including how it works, different whilst mirroring the customers pace of understanding?</description>
        <inlineHelpText>Did the consultant confirm with the customer that they understood the product including how it works, different whilst mirroring the customers pace of understanding?</inlineHelpText>
        <label>Probe customers understanding of account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Knowledge_F_B_points__c</fullName>
        <formula>IF(OR(TEXT(  Explain_product_features_and_benefits__c )=&quot;Yes&quot;, TEXT( Explain_product_features_and_benefits__c  )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Acknowledge_buying_signals__c )=&quot;Yes&quot;, TEXT( Acknowledge_buying_signals__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Probe_customers_understanding_of_account__c )=&quot;Yes&quot;, TEXT( Probe_customers_understanding_of_account__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Overcome_objections__c )=&quot;Yes&quot;, TEXT( Overcome_objections__c  )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Ask_for_business__c )=&quot;Yes&quot;, TEXT( Ask_for_business__c  )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Knowledge (F&amp;B) points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Behaviours__c</fullName>
        <formula>IF(OR(TEXT(  Overall_tone_pace_and_pitch__c  )=&quot;Yes&quot;, TEXT(  Overall_tone_pace_and_pitch__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Appropriate_use_of_customers_name__c )=&quot;Yes&quot;, TEXT( Appropriate_use_of_customers_name__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Feedback_provided_to_lead_generator__c )=&quot;Yes&quot;, TEXT(  Feedback_provided_to_lead_generator__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality &amp; Behaviours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_coaching__c</fullName>
        <label>Reason for coaching</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recap_call__c</fullName>
        <description>Did the consultant recap the call and confirm back the main points covered e.g. theaccount purchased, start date, payment method and amount payable whilst mirroring the customers pace?</description>
        <inlineHelpText>Did the consultant recap the call and confirm back the main points covered e.g. theaccount purchased, start date, payment method and amount payable whilst mirroring the customers pace?</inlineHelpText>
        <label>Recap call</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <description>Did the consultant ask the customer for recommendation for friends and family</description>
        <inlineHelpText>Did the consultant ask the customer for recommendation for friends and family</inlineHelpText>
        <label>Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Call_Type__c</fullName>
        <label>Sales Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>FTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YPSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Day Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact programme Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dormancy call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Soft_Skills_Servive_Excellence__c</fullName>
        <formula>IF(OR(TEXT(  Empathy__c  )=&quot;Yes&quot;, TEXT( Empathy__c  )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT(  Friendly_and_helpful__c )=&quot;Yes&quot;, TEXT( Friendly_and_helpful__c )=&quot;N/A&quot;), 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Soft Skills &amp; Servive Excellence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_call_close__c</fullName>
        <description>Did the consultant during the call close give their name and end the call with the brand? e.g. You&apos;ve been speaking to Nancy today and thank you for calling The Islamic Bank of Britain (promoting the customer satisfaction survey - optional) If before your account is open you have any further queries please do not hesitate to contact me on this number</description>
        <inlineHelpText>Did the consultant during the call close give their name and end the call with the brand? e.g. You&apos;ve been speaking to Nancy today and thank you for calling The Islamic Bank of Britain (promoting the customer satisfaction survey - optional)</inlineHelpText>
        <label>Standard call close</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_of_coaching__c</fullName>
        <label>Subject of coaching</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summarise_needs_and_match__c</fullName>
        <description>Did the consultant propose the ideal product to match the customer needs? Linking it back to the customers requirements</description>
        <inlineHelpText>Did the consultant propose the ideal product to match the customer needs? Linking it back to the customers requirements</inlineHelpText>
        <label>Summarise needs and match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Question_Gather_all_required_in__c</fullName>
        <description>Did the consultant gather all required information to input on to EBA and do this conversationally using a good tone and pace and listen, respond and probe further where applicable whilst asking system questions</description>
        <inlineHelpText>Did the consultant gather all required information to input on to EBA and do this conversationally using a good tone and pace and listen, respond and probe further where applicable whilst asking system questions</inlineHelpText>
        <label>System Question &amp; Gather all required in</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <formula>Call_Opening_Points__c + Product_Knowledge_F_B_points__c + Call_Close__c + Soft_Skills_Servive_Excellence__c + EKYC_ANC_Processing__c + Quality_Behaviours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_type_other__c</fullName>
        <inlineHelpText>If other entered under Sales Call type please enter details of call type here</inlineHelpText>
        <label>Transaction type (other)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Understand_customers_satisfaction_with_c__c</fullName>
        <description>Did the agent probe to understand the customers satisfaction with their current product provider and react with positive example where applicable? (outbound upsell only)</description>
        <inlineHelpText>Did the agent probe to understand the customers satisfaction with their current product provider and react with positive example where applicable? (outbound upsell only)</inlineHelpText>
        <label>Understand customers satisfaction with c</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Understand_reason_for_calling__c</fullName>
        <description>Did the consultant (establish the customers/inform the customer the) reason for calling (asking open &amp; probing questions/adopting a style to suit the customer) allowing them time to respond?</description>
        <inlineHelpText>Did the consultant (establish the customers/inform the customer the) reason for calling (asking open &amp; probing questions/adopting a style to suit the customer) allowing them time to respond?</inlineHelpText>
        <label>Understand reason for calling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Understand_what_would_make_the_customer__c</fullName>
        <description>Did they use open questions adopting a empathetic approach to identify what would make the customer purchase IBB Products</description>
        <inlineHelpText>Did they use open questions adopting a empathetic approach to identify what would make the customer purchase IBB Products</inlineHelpText>
        <label>Understand what would make the customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WRAP_call_correctly__c</fullName>
        <description>Did the agent correctly wrap the call against the nature of the enquiry</description>
        <inlineHelpText>Did the agent correctly wrap the call against the nature of the enquiry</inlineHelpText>
        <label>WRAP call correctly</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_did_the_coaching_take_place__c</fullName>
        <label>When did the coaching take place?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>greet_score__c</fullName>
        <label>greet score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>method_of_contact__c</fullName>
        <label>method of contact</label>
        <picklist>
            <picklistValues>
                <fullName>telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>branch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Call Centre Sales Coaching Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Person_Record_Associated__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CC-{000}</displayFormat>
        <label>Call Centre Coaching Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Centre Sales Coaching Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>